--- a/Java/스프링 입문을 위한 자바 객체 지향의 원리와 이해.md
+++ b/Java/스프링 입문을 위한 자바 객체 지향의 원리와 이해.md
@@ -3,9 +3,9 @@
 # 목차
 - [01 사람을 사랑한 기술](#01-사람을-사랑한-기술)
   - [01_신기술은 이전 기술의 어깨를 딛고](#01_신기술은-이전-기술의-어깨를-딛고)
-  - [02_기계어에서 객체 지향 프로그래밍 언어로](#02기계어에서-객체-지향-프로그래밍-언어로)
-  - [03_짧은 글, 긴 생각](#03짧은-글-긴-생각)
-  - [04_책 출간의 변](#04책-출간의-변)
+  - [02_기계어에서 객체 지향 프로그래밍 언어로](#02_기계어에서-객체-지향-프로그래밍-언어로)
+  - [03_짧은 글, 긴 생각](#03_짧은-글-긴-생각)
+  - [04_책 출간의 변](#04_책-출간의-변)
 - [02 자바와 절차적/구조적 프로그래밍](#02-자바와-절차적구조적-프로그래밍)
 - [03 자바와 객체지향](#03-자바와-객체-지향)
 - [04 자바가 확장한 객체지향](#04-자바가-확장한-객체-지향)
