--- a/Java/스프링 입문을 위한 자바 객체 지향의 원리와 이해.md
+++ b/Java/스프링 입문을 위한 자바 객체 지향의 원리와 이해.md
@@ -65,8 +65,7 @@ CPU마다 실행할 수 있는 기계어 세트가 달랐으니 당연히 어셈
 
 ![](../img/1-3.jpg)
 
-위의 그릠을 보면 알겠지만  
-운영체제가 하드웨어의 특성을 추상화하고 컴파일러는 운영체제 별로 만들어져 공급하게 되는데  
+위의 그림을 보면 알겠지만 운영체제가 하드웨어의 특성을 추상화하고 컴파일러는 운영체제 별로 만들어져 공급하게 되는데  
 그 운영체제들이 또 나름의 특성이 있었기에 하나의 소스로 각 기종별로 컴파일하기 전에  
 그 기종에 맞게 소스를 변경하는 작업이 필요했다.
 
