--- a/Spring/스프링 용어 정리.md
+++ b/Spring/스프링 용어 정리.md
@@ -23,7 +23,7 @@ print("hello world!")
 </p>
 </details>
 
-### Spring MVC
+### 웹 프로그래밍 기초
 <details>
     </br>
     <summary>원격 프로그램을 실행하려면?</summary>
@@ -139,4 +139,46 @@ print("hello world!")
         <td>ex) 게시판에 글쓰기, 로그인, 회원가입</td>
       </tr>
     </table>
+</details>
+<details>
+    </br>
+    <summary>URL(Uniform Resource Locator)이란?</summary>
+    <p>웹 브라우저의 주소줄에 표시되는 것</p>
+    <p>웹 리소스의 위치를 나타내는 주소</p>
+</details>
+<details>
+    </br>
+    <summary>URL을 입력하면?</summary>
+    <p>웹 브라우저 URL에 해당하는 내용이 출력된다. 웹 페이지라고 부른다.</p>
+</details>
+<details>
+    </br>
+    <summary>웹 사이트란?</summary>
+    <p>웹 페이지의 묶음</p>
+</details>
+<details>
+    </br>
+    <summary>URL 구성요소</summary>
+    <p>프로토콜, 서버이름, 경로, 쿼리문자열</p>
+</details>
+<details>
+    </br>
+    <summary>서버이름</summary>
+    <p>www.naver.com처럼 도메인 이름이나 192.168.0.9와 같은 IP주소를 입력할 수 있다.</p>
+</details>
+<details>
+    </br>
+    <summary>경로</summary>
+    <p>웹 페이지의 상세주소에 해당. 웹 페이지마다 다른 경로를 갖는다.</p>
+</details>
+<details>
+    </br>
+    <summary>쿼리 문자열</summary>
+    <p>추가로 서버에 보내는 데이터</p>
+    <p>같은 경로여도 입력한 값에 따라 다른 결과를 보여줘야 할 때 쿼리문자열을 사용</p>
+</details>
+<details>
+    </br>
+    <summary>DNS(Domain Name Service)란?</summary>
+    <p>도메인 이름 시스템은 사람이 읽을 수 있는 도메인 이름(www.naver.com)을 머신이 읽을 수 있는 IP주소(192.168.0.9)로 변환합니다.</p>
 </details>
